# usbutils-portable

./: .gitignore  Makefile.am  README.md  configure.ac  lsusb.c  names.c  names.h
usbhid-dump/src/: iface.c
